--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
                     <div class="begin-end">
-                        <img src="./assets/image/begin.jpg">
+                        <img src="./assets/image/begin.jpg" width="160%">
 
                     </div>
 
@@ -157,7 +157,7 @@
         <section class="talking">
             <div class="container">
                 <div class="row">
-                    <div class="photo"> <img src="./assets/image/Group 1964 (2).jpg" width="170%"></div>
+                    <div class="photo"> <img src="./assets/image/Group 1964.png" width="100%"></div>
                     <div>
                         <div class="begin-start1">
                             <div class="parg1"> SELECTED COURSE </div>
