--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
+                <svg class="bar" width="20px" height="20px" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path
+                        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+                </svg>
                 <div class="auth">
                     <a href="#">Log in</a>
                     <a href="#">Register</a>
@@ -32,7 +37,7 @@
             </div>
         </div>
     </header>
-    <>
+    
         <section class="begins">
             <div class="container">
                 <div class="row">
@@ -67,7 +72,7 @@
 
 
                     <div class="begin-end">
-                        <img src="./assets/image/begin.jpg" width="160%">
+                        <img src="./assets/image/begin.jpg" width="100%">
 
                     </div>
 
@@ -216,12 +221,13 @@
                             <div class="course-details">
                                 <div class="row">
                                     <h3>html & css</h3>
-                                    <span class="soso"> 1500 views </span>   
-                                </div>                           
-                                <div class="row">
-                                    <h3 class="bobo">120 videos</h3>
-                                    <span class="bobo"> 2 Teacher</span>
+                                    <span class="soso"> 1500 views </span>
                                 </div>
+                                <div class="lolo">
+                                    <h3 class="lolo">120 videos</h3>
+                                    <span class="lolo"> 2 Teacher</span>
+                                </div>
+
                             </div>
                         </div>
 
@@ -242,9 +248,9 @@
                                     <h3>Photographer</h3>
                                     <span class="soso"> 1500 views </span>
                                 </div>
-                                <div class="row">
-                                    <h3 class="bobo">120 videos</h3>
-                                    <span class="bobo"> 2 Teacher</span>
+                                <div class="lolo">
+                                    <h3 class="lolo">120 videos</h3>
+                                    <span class="lolo"> 2 Teacher</span>
                                 </div>
                             </div>
                         </div>
@@ -264,9 +270,9 @@
                                     <h3>JavaScript</h3>
                                     <span class="soso"> 1500 views </span>
                                 </div>
-                                <div class="row">
-                                    <h3 class="bobo">120 videos</h3>
-                                    <span class="bobo"> 2 Teacher</span>
+                                <div class="lolo">
+                                    <h3 class="lolo">120 videos</h3>
+                                    <span class="lolo"> 2 Teacher</span>
                                 </div>
                             </div>
                         </div>
@@ -285,9 +291,9 @@
                                     <h3>Desain Grafis</h3>
                                     <span class="soso"> 1500 views </span>
                                 </div>
-                                <div class="row">
-                                    <h3 class="bobo">120 videos</h3>
-                                    <span class="bobo"> 2 Teacher</span>
+                                <div class="lolo">
+                                    <h3 class="lolo">120 videos</h3>
+                                    <span class="lolo"> 2 Teacher</span>
                                 </div>
                             </div>
                         </div>
@@ -307,16 +313,17 @@
 
 
 
-                        </div>
-           
-            <div class="course-description">
-                <span> AVAILABLE FOR YOU</span>
-                <h2>Available <br> Courses</h2>
-                <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Etiam dignissim, <br>sem non convallis molestie.</p>
-<a href="#">see all</a>
-                        </div>
+                    </div>
+
+                    <div class="course-description">
+                        <span> AVAILABLE FOR YOU</span>
+                        <h2>Available <br> Courses</h2>
+                        <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Etiam dignissim, <br>sem non
+                            convallis molestie.</p>
+                        <a href="#">see all</a>
                     </div>
                 </div>
+            </div>
         </section>
 
 
